feat: updated landing page + revised for singleplayer only (at the moment)

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Stalinist+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+
 .App {
-  background-color: black;
-  height: 100vh;
+  // background-color: #442073;
+  background-color: #1e1c21;
+  // height: 100vh;
 }
